# Multithreading-Application

./: .gitignore  CMakeLists.txt
Application/: CMakeLists.txt  main.cpp
Application/Handle/: handle_input.cpp  handle_input.h
Application/Platform/: platform.hpp
Application/Worker/: worker.cpp  worker.h
